--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ spring:
     url: jdbc:mysql://localhost:3306/task
     username: root
     password: root
+  quartz:
+    job-store-type: jdbc
+# org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 
-server:
-  port:
+logging.level: info
